# PredPreyGrass

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  PredPreyGrass.code-workspace  README (doesburg-Aspire-A515-56's conflicted copy 2025-04-05).md  README.md  Readme_selfish_gene.md  TODO.md  _pyproject._toml  agent_fitness_stats.json  analyze_step_profile.py  analyze_step_profile_percent.py  asha_summary.csv  clean_ray_gpu.sh  environment.yml  evaluation_step_summary.csv  git-heal.sh  marl_ecology_positioning.md  optuna_trials.csv  predpreygrass.ipynb  predpreygrass_env.yml  pyproject.toml  requirements.txt  requirements_lock.txt  setup.cfg  setup.py  sort_agent_terminated_events_log.py
.github/: copilot-instructions.md
assets/: gifmaker.py
checkpoints/: training_results.json
envs/: predpreygrass_v0.py
godot_json_exports/: grid_step_00000.json  grid_step_00001.json  grid_step_00002.json  grid_step_00003.json  grid_step_00004.json  grid_step_00005.json  grid_step_00006.json  grid_step_00007.json  grid_step_00008.json  grid_step_00009.json  grid_step_00010.json  grid_step_00011.json  grid_step_00012.json  grid_step_00013.json  grid_step_00014.json  grid_step_00015.json  grid_step_00016.json  grid_step_00017.json  grid_step_00018.json  grid_step_00019.json  grid_step_00020.json  grid_step_00021.json  grid_step_00022.json  grid_step_00023.json  grid_step_00024.json  grid_step_00025.json  grid_step_00026.json  grid_step_00027.json  grid_step_00028.json  grid_step_00029.json
logs/: evaluations.npz  terminal_output.txt
predpreygrass/: README.md  README.txt  continue_training_saved_model.py  evaluate_from_file.py  (+7 more)
(+9637 files in other folders)
