[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predpreygrass"
version = "0.1"
description = "A multi-agent reinforcement learning environment with predators, prey, and grass."
authors = [
    { name = "Peter van Doesburg", email = "petervandoesburg11@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pettingzoo==1.24.3",
    "stable-baselines3[extra]==2.6.0",
    "SuperSuit==3.9.3",
    "ray[rllib]==2.54.0",
    "tensorboard==2.20.0",
    "numpy==1.26.4",
    "scipy==1.11.4",
    "Pillow>=10.0.0",
    "imageio>=2.34.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ipykernel",
    "jupyter",
    "mypy",
    "flake8"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
ignore = ["E402", "E203"]
line-length = 132
target-version = "py311"
